attempt to fix DT-1650, fix twitter images so they don't overlap text on windows phone

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1051,6 +1051,9 @@ hr.line.align-right {
     margin-top: 8px;
 	padding-right: 5%;
 	width: 15%;
+    img {
+        width: 100%;
+    }
 }
 
 .twitter-content {
